--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -8,24 +8,12 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">rover.webui</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+        <div id="branding">Rover</div>
+        <nav id="main-menu">
+            <ul>
+                <li><a href="~">Home</a></li>
+                <li><a href="~/Privacy">Privacy</a></li>
+            </ul>
         </nav>
     </header>
 
@@ -34,7 +22,7 @@
     </main>
 
     <footer class="border-top footer text-muted">
-        &copy; 2022 - rover.webui - <a asp-area="" asp-page="/Privacy">Privacy</a>
+        &copy; 2022 - <a href="https://leafpuddle.com">leafpuddle</a> and <a href="https://faultybranches.net">FaultyBranches</a>
     </footer>
 </body>
 </html>
