Futher cleanup of default files, adding in templates for TCG files.

--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -8,11 +8,12 @@
 </head>
 <body>
     <header>
-        <div id="branding">Rover</div>
+        <div id="branding"><a href="/">Rover</a></div>
         <nav id="main-menu">
             <ul>
-                <li><a href="~">Home</a></li>
-                <li><a href="~/Privacy">Privacy</a></li>
+                <li><a href="~/tcg">TCG</a></li>
+                <li><a href="~/tcg/cards">Cards</a></li>
+                <li><a href="~/tcg/collections">Collections</a></li>
             </ul>
         </nav>
     </header>
