--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -52,6 +52,7 @@ table {
 html, body {
     height: 100%;
     min-height: 100vh;
+    max-width: 100vw;
 }
 
 body {
@@ -62,7 +63,6 @@ body {
 }
 
 header {
-    
     padding: 5px;
     display: grid;
     grid-template-columns: min-content auto;
@@ -105,4 +105,50 @@ header nav ul {
     padding: 0px 20px;
     font-size: 20px;
     font-weight: 500;
+}
+
+/* Display Elements */
+.bauble {
+    margin: 10px 0px;
+    padding: 15px;
+    border-radius: 15px;
+    border: 5px solid;
+}
+
+.bauble-title {
+    margin-bottom: 15px;
+    font-size: 30px;
+    font-weight: 500;
+}
+
+.list {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 200px);
+    gap: 20px;
+    justify-content: space-between;
+}
+
+.green {
+    border-color: #6cce55;
+}
+
+.purple {
+    border-color: #9e70d2;
+}
+
+.yellow {
+    border-color: #b9b170;
+}
+
+.red {
+    border-color: #b7554b;
+}
+
+.blue {
+    border-color: #21baf2;
+}
+
+.card {
+    height: 300px;
+    width: auto;
 }
