Completed Frontend boilerplate

--- a/Pages/TCG/Tcg.cshtml
+++ b/Pages/TCG/Tcg.cshtml
@@ -4,4 +4,9 @@
     ViewData["Title"] = "Trading Card Game";
 }
 
-This is the TCG home page. Write stuff about the trading card game.
+<div class="center-expand">
+    <div class="bauble white center">
+        This is the TCG home page.<br><br>
+        We should probably eventually write how the TCG works in this space in the future.
+    </div>
+</div>
