--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,4 +4,11 @@
     ViewData["Title"] = "Home";
 }
 
-This is the Rover home page. I don't know what to put here yet.
+<div class="center-expand">
+    <div class="bauble white center">
+        Hi!<br><br>
+        I'm Rover. I'm a Discord Bot that hangs out in a private server, This Place Is Not A Place Of Honor. My features are slowly growing. I'm actively being developed by Vi Roesler of <a href="https://leafpuddle.com">leafpuddle</a> and Joshua Finch of <a href="https://faultybranches.net">FaultyBranches</a>. If you want to request new features or content, you know how to get ahold of us. As I learn how to do new things, you can find information placed on this site. Check back if you ever want to know more about me.<br><br>
+        Happy Chatting!<br><br>
+        - Rover
+    </div>
+</div>
