--- a/Pages/TCG/Cards.cshtml
+++ b/Pages/TCG/Cards.cshtml
@@ -4,68 +4,70 @@
     ViewData["Title"] = "List of Cards";
 }
 
-<div class="bauble green">
-    <div class="bauble-title">Common Cards</div>
-    <div class="list">
-        <img class="card display" src="~/devimages/common.png">
-        <img class="card display" src="~/devimages/common.png">
-        <img class="card display" src="~/devimages/common.png">
-        <img class="card display" src="~/devimages/common.png">
-        <img class="card display" src="~/devimages/common.png">
-        <img class="card display" src="~/devimages/common.png">
-        <img class="card display" src="~/devimages/common.png">
-        <img class="card display" src="~/devimages/common.png">
-        <img class="card display" src="~/devimages/common.png">
-        <img class="card display" src="~/devimages/common.png">
-        <img class="card display" src="~/devimages/common.png">
-        <img class="card display" src="~/devimages/common.png">
+<div class="card-list">
+    <div class="bauble green">
+        <div class="bauble-title">Common Cards</div>
+        <div class="list">
+            <img class="card display" src="~/devimages/common.png">
+            <img class="card display" src="~/devimages/common.png">
+            <img class="card display" src="~/devimages/common.png">
+            <img class="card display" src="~/devimages/common.png">
+            <img class="card display" src="~/devimages/common.png">
+            <img class="card display" src="~/devimages/common.png">
+            <img class="card display" src="~/devimages/common.png">
+            <img class="card display" src="~/devimages/common.png">
+            <img class="card display" src="~/devimages/common.png">
+            <img class="card display" src="~/devimages/common.png">
+            <img class="card display" src="~/devimages/common.png">
+            <img class="card display" src="~/devimages/common.png">
+        </div>
     </div>
-</div>
 
-<div class="bauble purple">
-    <div class="bauble-title">Uncommon Cards</div>
-    <div class="list">
-        <img class="card display" src="~/devimages/uncommon.png">
-        <img class="card display" src="~/devimages/uncommon.png">
-        <img class="card display" src="~/devimages/uncommon.png">
-        <img class="card display" src="~/devimages/uncommon.png">
-        <img class="card display" src="~/devimages/uncommon.png">
-        <img class="card display" src="~/devimages/uncommon.png">
-        <img class="card display" src="~/devimages/uncommon.png">
-        <img class="card display" src="~/devimages/uncommon.png">
-        <img class="card display" src="~/devimages/uncommon.png">
-        <img class="card display" src="~/devimages/uncommon.png">
-        <img class="card display" src="~/devimages/uncommon.png">
+    <div class="bauble purple">
+        <div class="bauble-title">Uncommon Cards</div>
+        <div class="list">
+            <img class="card display" src="~/devimages/uncommon.png">
+            <img class="card display" src="~/devimages/uncommon.png">
+            <img class="card display" src="~/devimages/uncommon.png">
+            <img class="card display" src="~/devimages/uncommon.png">
+            <img class="card display" src="~/devimages/uncommon.png">
+            <img class="card display" src="~/devimages/uncommon.png">
+            <img class="card display" src="~/devimages/uncommon.png">
+            <img class="card display" src="~/devimages/uncommon.png">
+            <img class="card display" src="~/devimages/uncommon.png">
+            <img class="card display" src="~/devimages/uncommon.png">
+            <img class="card display" src="~/devimages/uncommon.png">
+        </div>
     </div>
-</div>
 
-<div class="bauble yellow">
-    <div class="bauble-title">Rare Cards</div>
-    <div class="list">
-        <img class="card display" src="~/devimages/rare.png">
-        <img class="card display" src="~/devimages/rare.png">
-        <img class="card display" src="~/devimages/rare.png">
-        <img class="card display" src="~/devimages/rare.png">
-        <img class="card display" src="~/devimages/rare.png">
-        <img class="card display" src="~/devimages/rare.png">
-        <img class="card display" src="~/devimages/rare.png">
+    <div class="bauble yellow">
+        <div class="bauble-title">Rare Cards</div>
+        <div class="list">
+            <img class="card display" src="~/devimages/rare.png">
+            <img class="card display" src="~/devimages/rare.png">
+            <img class="card display" src="~/devimages/rare.png">
+            <img class="card display" src="~/devimages/rare.png">
+            <img class="card display" src="~/devimages/rare.png">
+            <img class="card display" src="~/devimages/rare.png">
+            <img class="card display" src="~/devimages/rare.png">
+        </div>
     </div>
-</div>
 
-<div class="bauble red">
-    <div class="bauble-title">Legendary Cards</div>
-    <div class="list">
-        <img class="card display" src="~/devimages/legendary.png">
-        <img class="card display" src="~/devimages/legendary.png">
-        <img class="card display" src="~/devimages/legendary.png">
-        <img class="card display" src="~/devimages/legendary.png">
+    <div class="bauble red">
+        <div class="bauble-title">Legendary Cards</div>
+        <div class="list">
+            <img class="card display" src="~/devimages/legendary.png">
+            <img class="card display" src="~/devimages/legendary.png">
+            <img class="card display" src="~/devimages/legendary.png">
+            <img class="card display" src="~/devimages/legendary.png">
+        </div>
     </div>
-</div>
 
-<div class="bauble blue">
-    <div class="bauble-title">Mythic Cards</div>
-    <div class="list">
-        <img class="card display" src="~/devimages/mythic.png">
-        <img class="card display" src="~/devimages/mythic.png">
+    <div class="bauble blue">
+        <div class="bauble-title">Mythic Cards</div>
+        <div class="list">
+            <img class="card display" src="~/devimages/mythic.png">
+            <img class="card display" src="~/devimages/mythic.png">
+        </div>
     </div>
 </div>
