--- a/Pages/TCG/Collections.cshtml
+++ b/Pages/TCG/Collections.cshtml
@@ -4,4 +4,4 @@
     ViewData["Title"] = "List of Collections";
 }
 
-This is a list of collections.
+This is a list of collections. We'll add everyone in a list which links to their personal collection on this page in the future.
