Adding cards page and individual card info page.

--- a/Pages/TCG/Tcg.cshtml
+++ b/Pages/TCG/Tcg.cshtml
@@ -7,6 +7,12 @@
 <div class="center-expand">
     <div class="bauble white center">
         This is the TCG home page.<br><br>
-        We should probably eventually write how the TCG works in this space in the future.
+        We should probably eventually write how the TCG works in this space in the future.<br><br>
+
+        Ideas:<br>
+        - People can request a gift of one random card every X amount of time. This time period is still to be determined.<br>
+        - Chatting in the server is monitored by Rover, and sometimes Rover will grant a random card for chatting in the server.<br>
+        - Rover will keep a shop of cards that change every X amount of time. You can use this shop to buy and sell cards.<br>
+        - Trading is something I want to implement, but I'm not entirely sure how to do it cleanly yet.
     </div>
 </div>
