Updated route to cards page, updated sorting order for teh GetCards query model

--- a/Pages/TCG/Cards.cshtml
+++ b/Pages/TCG/Cards.cshtml
@@ -10,7 +10,7 @@
         <div class="list">
             @foreach (ModelCard card in Model.commonCards)
             {
-                <a href="~/tcg/cards/@card.id">
+                <a href="~/tcg/cards/c/@card.id">
                     <img class="card display" src="https://rover.us-east-1.linodeobjects.com/@(card.id).png" >
                 </a>
             }
@@ -22,7 +22,7 @@
         <div class="list">
             @foreach (ModelCard card in Model.uncommonCards)
             {
-                <a href="~/tcg/cards/@card.id">
+                <a href="~/tcg/cards/c/@card.id">
                     <img class="card display" src="https://rover.us-east-1.linodeobjects.com/@(card.id).png" >
                 </a>
             }
@@ -34,7 +34,7 @@
         <div class="list">
             @foreach (ModelCard card in Model.rareCards)
             {
-                <a href="~/tcg/cards/@card.id">
+                <a href="~/tcg/cards/c/@card.id">
                     <img class="card display" src="https://rover.us-east-1.linodeobjects.com/@(card.id).png" >
                 </a>
             }
@@ -46,7 +46,7 @@
         <div class="list">
             @foreach (ModelCard card in Model.legendaryCards)
             {
-                <a href="~/tcg/cards/@card.id">
+                <a href="~/tcg/cards/c/@card.id">
                     <img class="card display" src="https://rover.us-east-1.linodeobjects.com/@(card.id).png" >
                 </a>
             }
@@ -58,7 +58,7 @@
         <div class="list">
             @foreach (ModelCard card in Model.mythicCards)
             {
-                <a href="~/tcg/cards/@card.id">
+                <a href="~/tcg/cards/c/@card.id">
                     <img class="card display" src="https://rover.us-east-1.linodeobjects.com/@(card.id).png" >
                 </a>
             }
